pseudoParser.py
# Generated from pseudo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pseudoParser ( Parser ):

    grammarFileName = "pseudo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'REPEAT'", "'UNTIL'", "'WHILE'", "'ENDWHILE'", 
                     "'FOR'", "'<-'", "'TO'", "'STEP'", "'ENDFOR'", "'IN'", 
                     "'ENDIF'", "'IF'", "'THEN'", "'RECORD'", "'ENDRECORD'", 
                     "':'", "'ELSE IF'", "'ELSE'", "'SUBROUTINE'", "'('", 
                     "','", "')'", "'ENDSUBROUTINE'", "'reveal_type'", "'RETURN'", 
                     "'OUTPUT'", "'NOT'", "'-'", "'MOD'", "'DIV'", "'*'", 
                     "'/'", "'+'", "'<'", "'>'", "'='", "'\u2260'", "'\u2264'", 
                     "'\u2265'", "'AND'", "'OR'", "'['", "']'", "'.'", "'USERINPUT'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'CONSTANT'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "WS", "BOOL", 
                      "STRING", "CONSTANT", "IDENTIFIER", "FLOAT", "INT", 
                      "DIGIT", "LETTER" ]

    RULE_prog = 0
    RULE_block = 1
    RULE_repeat_until = 2
    RULE_while_loop = 3
    RULE_for_loop_step = 4
    RULE_for_loop = 5
    RULE_condition_sequence = 6
    RULE_if_block = 7
    RULE_record = 8
    RULE_field = 9
    RULE_else_if_block = 10
    RULE_else_block = 11
    RULE_arg = 12
    RULE_subroutine = 13
    RULE_stat = 14
    RULE_reveal_type = 15
    RULE_return_stat = 16
    RULE_function_call = 17
    RULE_output = 18
    RULE_variable_assignment = 19
    RULE_expr = 20

    ruleNames =  [ "prog", "block", "repeat_until", "while_loop", "for_loop_step", 
                   "for_loop", "condition_sequence", "if_block", "record", 
                   "field", "else_if_block", "else_block", "arg", "subroutine", 
                   "stat", "reveal_type", "return_stat", "function_call", 
                   "output", "variable_assignment", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    COMMENT=46
    WS=47
    BOOL=48
    STRING=49
    CONSTANT=50
    IDENTIFIER=51
    FLOAT=52
    INT=53
    DIGIT=54
    LETTER=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def record(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.RecordContext)
            else:
                return self.getTypedRuleContext(pseudoParser.RecordContext,i)


        def subroutine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.SubroutineContext)
            else:
                return self.getTypedRuleContext(pseudoParser.SubroutineContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_prog

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = pseudoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__13) | (1 << pseudoParser.T__18) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 45
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [pseudoParser.T__0, pseudoParser.T__2, pseudoParser.T__4, pseudoParser.T__11, pseudoParser.T__19, pseudoParser.T__23, pseudoParser.T__24, pseudoParser.T__25, pseudoParser.T__26, pseudoParser.T__27, pseudoParser.T__41, pseudoParser.T__44, pseudoParser.BOOL, pseudoParser.STRING, pseudoParser.CONSTANT, pseudoParser.IDENTIFIER, pseudoParser.FLOAT, pseudoParser.INT]:
                    self.state = 42
                    self.block()
                    pass
                elif token in [pseudoParser.T__13]:
                    self.state = 43
                    self.record()
                    pass
                elif token in [pseudoParser.T__18]:
                    self.state = 44
                    self.subroutine()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def repeat_until(self):
            return self.getTypedRuleContext(pseudoParser.Repeat_untilContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(pseudoParser.While_loopContext,0)


        def for_loop_step(self):
            return self.getTypedRuleContext(pseudoParser.For_loop_stepContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(pseudoParser.For_loopContext,0)


        def condition_sequence(self):
            return self.getTypedRuleContext(pseudoParser.Condition_sequenceContext,0)


        def stat(self):
            return self.getTypedRuleContext(pseudoParser.StatContext,0)


        def getRuleIndex(self):
            return pseudoParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = pseudoParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.repeat_until()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.while_loop()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.for_loop_step()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.for_loop()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.condition_sequence()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.stat()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Repeat_untilContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(pseudoParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_repeat_until

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepeat_until" ):
                return visitor.visitRepeat_until(self)
            else:
                return visitor.visitChildren(self)




    def repeat_until(self):

        localctx = pseudoParser.Repeat_untilContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_repeat_until)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(pseudoParser.T__0)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 59
                self.block()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(pseudoParser.T__1)
            self.state = 66
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(pseudoParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_while_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = pseudoParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_while_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(pseudoParser.T__2)
            self.state = 69
            self.expr(0)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 70
                self.block()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(pseudoParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loop_stepContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.step = None # ExprContext

        def IDENTIFIER(self):
            return self.getToken(pseudoParser.IDENTIFIER, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.ExprContext)
            else:
                return self.getTypedRuleContext(pseudoParser.ExprContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_for_loop_step

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop_step" ):
                return visitor.visitFor_loop_step(self)
            else:
                return visitor.visitChildren(self)




    def for_loop_step(self):

        localctx = pseudoParser.For_loop_stepContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_for_loop_step)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(pseudoParser.T__4)
            self.state = 79
            self.match(pseudoParser.IDENTIFIER)
            self.state = 80
            self.match(pseudoParser.T__5)
            self.state = 81
            self.expr(0)
            self.state = 82
            self.match(pseudoParser.T__6)
            self.state = 83
            self.expr(0)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pseudoParser.T__7:
                self.state = 84
                self.match(pseudoParser.T__7)
                self.state = 85
                localctx.step = self.expr(0)


            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 88
                self.block()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(pseudoParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pseudoParser.IDENTIFIER, 0)

        def expr(self):
            return self.getTypedRuleContext(pseudoParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_for_loop

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop" ):
                return visitor.visitFor_loop(self)
            else:
                return visitor.visitChildren(self)




    def for_loop(self):

        localctx = pseudoParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_for_loop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(pseudoParser.T__4)
            self.state = 97
            self.match(pseudoParser.IDENTIFIER)
            self.state = 98
            self.match(pseudoParser.T__9)
            self.state = 99
            self.expr(0)

            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 100
                self.block()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(pseudoParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_sequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_block(self):
            return self.getTypedRuleContext(pseudoParser.If_blockContext,0)


        def else_if_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.Else_if_blockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.Else_if_blockContext,i)


        def else_block(self):
            return self.getTypedRuleContext(pseudoParser.Else_blockContext,0)


        def getRuleIndex(self):
            return pseudoParser.RULE_condition_sequence

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition_sequence" ):
                return visitor.visitCondition_sequence(self)
            else:
                return visitor.visitChildren(self)




    def condition_sequence(self):

        localctx = pseudoParser.Condition_sequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.if_block()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pseudoParser.T__16:
                self.state = 109
                self.else_if_block()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pseudoParser.T__17:
                self.state = 115
                self.else_block()


            self.state = 118
            self.match(pseudoParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(pseudoParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_if_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = pseudoParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(pseudoParser.T__11)
            self.state = 121
            self.expr(0)
            self.state = 122
            self.match(pseudoParser.T__12)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 123
                self.block()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pseudoParser.IDENTIFIER, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.FieldContext)
            else:
                return self.getTypedRuleContext(pseudoParser.FieldContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_record

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecord" ):
                return visitor.visitRecord(self)
            else:
                return visitor.visitChildren(self)




    def record(self):

        localctx = pseudoParser.RecordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_record)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(pseudoParser.T__13)
            self.state = 130
            self.match(pseudoParser.IDENTIFIER)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pseudoParser.IDENTIFIER:
                self.state = 131
                self.field()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(pseudoParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pseudoParser.IDENTIFIER)
            else:
                return self.getToken(pseudoParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return pseudoParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = pseudoParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(pseudoParser.IDENTIFIER)
            self.state = 140
            self.match(pseudoParser.T__15)
            self.state = 141
            self.match(pseudoParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_if_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(pseudoParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_else_if_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_if_block" ):
                return visitor.visitElse_if_block(self)
            else:
                return visitor.visitChildren(self)




    def else_if_block(self):

        localctx = pseudoParser.Else_if_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_else_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(pseudoParser.T__16)
            self.state = 144
            self.expr(0)
            self.state = 145
            self.match(pseudoParser.T__12)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 146
                self.block()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pseudoParser.BlockContext)
            else:
                return self.getTypedRuleContext(pseudoParser.BlockContext,i)


        def getRuleIndex(self):
            return pseudoParser.RULE_else_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_block" ):
                return visitor.visitElse_block(self)
            else:
                return visitor.visitChildren(self)




    def else_block(self):

        localctx = pseudoParser.Else_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_else_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(pseudoParser.T__17)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pseudoParser.T__0) | (1 << pseudoParser.T__2) | (1 << pseudoParser.T__4) | (1 << pseudoParser.T__11) | (1 << pseudoParser.T__19) | (1 << pseudoParser.T__23) | (1 << pseudoParser.T__24) | (1 << pseudoParser.T__25) | (1 << pseudoParser.T__26) | (1 << pseudoParser.T__27) | (1 << pseudoParser.T__41) | (1 << pseudoParser.T__44) | (1 << pseudoParser.BOOL) | (1 << pseudoParser.STRING) | (1 << pseudoParser.CONSTANT) | (1 << pseudoParser.IDENTIFIER) | (1 << pseudoParser.FLOAT) | (1 << pseudoParser.INT))) != 0):
                self.state = 153
                self.block()
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'
